Bug 312667 - Cut off text in About KDE dialog
Summary: Cut off text in About KDE dialog
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kxmlgui
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.23.0
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
: 317703 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-01-05 12:03 UTC by Shawn Kuykendall
Modified: 2016-07-14 11:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
attachment-8775-0.html (1.54 KB, text/html)
2013-01-05 13:58 UTC, Shawn Kuykendall
Details
attachment-8775-1.dat (1 bytes, multipart/alternative)
2013-01-05 13:58 UTC, Shawn Kuykendall
Details
snapshot1.png (112.74 KB, image/png)
2013-01-05 13:58 UTC, Shawn Kuykendall
Details
Proposed patch (833 bytes, patch)
2016-06-18 04:40 UTC, Christoph Feck
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Shawn Kuykendall 2013-01-05 12:03:58 UTC
Using the alpha version of kubuntu 13.04 and kde 4.9.97 which I believe is the 4.10 version. If you go to about kde, then click the support kde tab, there's text that is cut off at the bottom you can't scroll to read it.

Reproducible: Always
Comment 1 Jekyll Wu 2013-01-05 12:09:47 UTC
sceenshot, please .  And your language ?
Comment 2 Shawn Kuykendall 2013-01-05 13:53:39 UTC
I use english language. Thanks...

On Sat, Jan 5, 2013 at 6:09 AM, Jekyll Wu <adaptee@gmail.com> wrote:

> https://bugs.kde.org/show_bug.cgi?id=312667
>
> Jekyll Wu <adaptee@gmail.com> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>           Component|general                     |kdeui
>             Version|4.0                         |4.9.97 RC2
>            Assignee|unassigned-bugs@kde.org     |kdelibs-bugs@kde.org
>             Product|unknown                     |kdelibs
>
> --- Comment #1 from Jekyll Wu <adaptee@gmail.com> ---
> sceenshot, please .  And your language ?
>
> --
> You are receiving this mail because:
> You reported the bug.
>
Comment 3 Shawn Kuykendall 2013-01-05 13:58:10 UTC
Created attachment 76209 [details]
attachment-8775-0.html

Attaching again since it said it was to large. Using english language.

On Sat, Jan 5, 2013 at 6:09 AM, Jekyll Wu <adaptee@gmail.com> wrote:

> https://bugs.kde.org/show_bug.cgi?id=312667
>
> Jekyll Wu <adaptee@gmail.com> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>           Component|general                     |kdeui
>             Version|4.0                         |4.9.97 RC2
>            Assignee|unassigned-bugs@kde.org     |kdelibs-bugs@kde.org
>             Product|unknown                     |kdelibs
>
> --- Comment #1 from Jekyll Wu <adaptee@gmail.com> ---
> sceenshot, please .  And your language ?
>
> --
> You are receiving this mail because:
> You reported the bug.
>
Comment 4 Shawn Kuykendall 2013-01-05 13:58:11 UTC
Created attachment 76210 [details]
attachment-8775-1.dat
Comment 5 Shawn Kuykendall 2013-01-05 13:58:11 UTC
Created attachment 76211 [details]
snapshot1.png
Comment 6 Christoph Feck 2013-04-01 22:41:02 UTC
*** Bug 317703 has been marked as a duplicate of this bug. ***
Comment 7 Christoph Feck 2016-06-18 04:40:42 UTC
Created attachment 99560 [details]
Proposed patch

Still reproducible with today's master and Qt 5.7.0. Tentative patch added.
Comment 8 Christoph Feck 2016-07-14 11:35:07 UTC
Git commit 16dd0938b542342c73efdf501d4151a4c9300b48 by Christoph Feck.
Committed on 14/07/2016 at 11:33.
Pushed by cfeck into branch 'master'.

Fix minimum size hint (cut-off text)
REVIEW: 128443

M  +2    -1    src/kaboutkdedialog_p.cpp

http://commits.kde.org/kxmlgui/16dd0938b542342c73efdf501d4151a4c9300b48