Fix minimum size hint (cut-off text)

BUG: 312667
REVIEW: 128443